--- a/css/styles/index.css
+++ b/css/styles/index.css
@@ -1,2 +1,23 @@
 @charset "UTF-8";
 @import url("../normalize/normalize.css");
+@import url("./vars.css");
+@import url("./classRules.css");
+*, *::before, *::after {
+	box-sizing: inherit;
+}
+body {
+	background-color: var(--bg-color);
+	box-sizing: border-box;
+}
+.search-result {
+	margin: 2em 10%;
+	width: 80%;
+	border-left: .7em solid transparent;
+}
+.search-result:hover {
+	border-left-color: orange;
+}
+.search-result a {
+	color: black;
+	text-decoration: none;
+}
