--- a/css/styles/index.css
+++ b/css/styles/index.css
@@ -13,6 +13,7 @@ body {
 	margin: 2em 10%;
 	width: 80%;
 	border-left: .7em solid transparent;
+	animation: fade-in 600ms;
 }
 .search-result:hover {
 	border-left-color: orange;
@@ -20,4 +21,11 @@ body {
 .search-result a {
 	color: black;
 	text-decoration: none;
+}
+
+@keyframes fade-in {
+	from {
+		opacity: 0;
+		transform: translateX(5em);
+	}
 }
