--- a/css/styles/index.css
+++ b/css/styles/index.css
@@ -2,6 +2,10 @@
 @import url("../normalize/normalize.css");
 @import url("./vars.css");
 @import url("./classRules.css");
+@import url("./form.css");
+:root {
+	font-size: 1.7vw;
+}
 *, *::before, *::after {
 	box-sizing: inherit;
 }
